--- a/TOC/19_48/index.html
+++ b/TOC/19_48/index.html
@@ -14,11 +14,11 @@
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #46 2019">	
+<meta property="og:title" content="Weekly Shonen Jump #48 2019">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_46/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_46">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_48/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_48">
 <meta name="twitter:card" content="summary_large_image">
 
 <link rel="stylesheet" href="css/reset.css">
@@ -50,9 +50,9 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#46</button></a>
- 	  <a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+	  <a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#48</button></a>
+ 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
@@ -71,21 +71,45 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
 
+			
 	<div class="contents">
-		<!-- My Hero Academia -->
+
+		<!-- Dr. STONE -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
+				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					The anime is starting again! I’m so happy! I’m so blessed!
+					<p class="author">Riichiro Inagaki</p>
+					Just as the anime starts the Byakuya arc, we have Boichi Sensei’s side story too! I’m so happy about the perfect timing!
+				</div>
+			</div>
+		</div>
+		<!-- Dr. STONE -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100073">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_boichi.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Boichi</p>
+					I root for and love people who move forward even if they mess up and get hurt, over those who stay safe out of fear of failure.
+				</div>
+			</div>
+		</div>
+ 	 <!-- One Piece -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Eiichiro Oda</p>
+					I want to eat an infinite amount of the Maru-chan Paripari Infinite Cabbage snack. Uh-oh!
 				</div>
 			</div>
 		</div>
@@ -97,10 +121,22 @@
 				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Koyoharu Gotouge</p>
-					The anime’s quality was amazing to the very end! I’m so thankful to everyone involved!
+					I heard a giant “CRAAASH” and an “Ahhh!” from outside my window. I hope everyone’s okay.
+				</div>
+			</div>
+		</div>		
+		<!-- My Hero Academia -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kohei Horikoshi</p>
+					Sorry about this week’s chapter. I’m gonna take a break and come back strong!
 				</div>
 			</div>
 		</div>
+
 		
 		<!-- Haikyuu -->
 		<div class="comment_area">
@@ -109,33 +145,10 @@
 				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Haruichi Furudate</p>
-					Sorry, I’ll be taking another break next week. Please stick with me just a little longer after that. 
+					My best wishes to everyone who suffered in the typhoon. I pray that everyone recovers as soon as possible.
 				</div>
 			</div>
 		</div>	
-		
-		<!-- Dr. STONE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Riichiro Inagaki</p>
-					It turns out that not falling while riding a bike isn’t just thanks to the gyro effect. The handlebars are important too.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Black Clover -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100003">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Y&umacr;ki Tabata</p>
-					The Black Clover anime is entering its third year! Thank you to everyone! I’m so blessed!				</div>
-			</div>
-		</div>
 		
 		<!-- Jujutsu Kaisen-->
 		<div class="comment_area">
@@ -144,34 +157,10 @@
 				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Gege Akutami</p>
-					I’ve been wanting to make LINE stamps. I had so much fun. Enjoy!
+					Last week I forgot to include a Miwa puppet in the ways to contact Gojo. That’s all right!
 				</div>
 			</div>
 		</div>
-		
-		<!-- Yozakura -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Hitsuji Gondaira</p>
-					If God appeared before me, I think I’d make the same wish as Doburock in their comedy skit. Please give me a giant…
-				</div>
-			</div>
-		</div>		
-		<!-- The Promised Neverland -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kaiu Shirai</p>
-					I never thought I’d feel this way. I really want to hang down from a wall bar. I want to stretch out.
-				</div>
-			</div>
-		</div>
-		
 		<!-- We Never Learn -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100035">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -179,7 +168,7 @@
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Taishi Tsutsui</p>
-					Season 2 of the anime is finally starting!! Yay!! Please check it out!
+					I just realized I could connect my smartphone to my TV to watch YouTube. This will help with my workouts!
 				</div>
 			</div>
 		</div>
@@ -191,10 +180,35 @@
 				<div class="l_side"><img src="img/img_hatomune.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tsurun Hatomune</p>
-					My home and work studio is the same place. A zero-minute commute! I wake up and I’m at work! It’s great!! I want to go far away!
+					I haven’t cut my hair in forever, and it’s now slightly longer than the average middle-aged Japanese woman’s hair length.
 				</div>
 			</div>
 		</div>
+				
+		<!-- Black Clover -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100003">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Y&umacr;ki Tabata</p>
+					Watching the news is scary. I wish the best for everyone suffering from the typhoon.
+				</div>
+			</div>
+		</div>
+
+		
+		<!-- Yozakura -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Hitsuji Gondaira</p>
+					Pocahontas and Belle are really great Disney heroines, but the best is, of course, Esmeralda.
+				</div>
+			</div>
+		</div>		
 		
 		<!-- chainsaw -->
 		<div class="comment_area">
@@ -203,14 +217,11 @@
 				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tatsuki Fujimoto</p>
-					There’s something called cheese tea which I would like to try someday.
+					Thank you so much for the birthday present. It was delicious.
 				</div>
 			</div>
 		</div>
-		
 
-
-		
 		<!-- actage -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -218,7 +229,7 @@
 				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Shiro Usazaki</p>
-					My iPhone fingerprint reader isn’t working as well as it used to. I probably no longer have fingerprints.
+					Taking a bath and getting warm makes me fall asleep, so lately I’ve been reading Twitter to keep myself awake.
 				</div>
 			</div>
 		</div>
@@ -230,11 +241,21 @@
 				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Hiroshi Shiibashi</p>
-					I watched the TV drama Natsuzora until the end. I enjoyed talking about who each person is based on.
+					I’m having fun asking my assistants how far they’ve gotten in DQ Walk. I’m making slow progress.
 				</div>
 			</div>
 		</div>
-		
+	<!-- Double Taisei -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kentaro Fukuda</p>
+					I live in the Edogawa district. I was drawing the manga while fearing the typhoon. I’m lucky we didn’t lose power.
+				</div>
+			</div>
+		</div>		
 		<!-- samurai 8 -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -242,33 +263,11 @@
 				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Masashi Kishimoto</p>
-					I went to the bookstore and bought some books. But I don’t actually have time to read them… Crummy.
+					I drink a lot of coffee to stay awake. I like the flavor too, so I can’t help but drink too much.
 				</div>
 			</div>
 		</div>
 	
-		<!-- Double Taisei -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kentaro Fukuda</p>
-					I often order Chinese delivery. Pepper steak is by far the best.
-				</div>
-			</div>
-		</div>
-		<!-- Beast Children -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Terasaka</p>
-					Japan beat Ireland! I hope they can keep it up! Go, Japan!
-				</div>
-			</div>
-		</div>
 		<!-- tokyo -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -276,9 +275,21 @@
 				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Kento Matsuura</p>
-					The gum my assistant bought has three different spice levels. I’ve been secretly only having the sweetest one.
+					So much sadness when I’m eating a sandwich but can’t bite through the lettuce, and then the whole piece of lettuce is just gone.
 				</div>
-			</div>	
+			</div>			
+		<!-- Beast Children -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kento Terasaka</p>
+					Japan got first place in their pool in the Rugby World Cup! It feels like I’m dreaming! Let’s win the whole thing!!
+				</div>
+			</div>
+		</div>
+
 			
 	</div><!-- end .contents -->
 	<div id="footer">
