--- a/TOC/index.html
+++ b/TOC/index.html
@@ -207,7 +207,11 @@
 <h2><a href="19_47/" style="display:block; width:100%">Weekly Shonen Jump #47 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_47/">
   <img src="img/19_47.jpg">
-</a>        	  	   	 		  
+</a>
+<h2><a href="19_48" style="display:block; width:100%">Weekly Shonen Jump #48 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_48/">
+  <img src="img/19_48.jpg">
+</a>          	  	   	 		  
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
