--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -100,7 +100,7 @@
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,173,103(109)┃2019/07/04|One&nbsp;Piece&nbsp;93
 <br>*2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,701,216(109)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,752,846(116)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
 <br>*4|*190803(3)|*399399|*497864|*544803|*570463┃*,642,734(*73)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
 <br>*5|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
 <br>*6|*260748(5)|*356785|*408394|*440330|*456289┃*,463,955(*40)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
@@ -113,7 +113,7 @@
 <br>13|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>14|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
 <br>15|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
-<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26	
+<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26
 </span>
 <p>
 	-
@@ -122,13 +122,13 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|1182323(3)|1531766|1711240|-------|-------┃1,711,240(*17)┃2019/10/04|One&nbsp;Piece&nbsp;94
-<br>*2|*368502(3)|*530591|*663662|-------|-------┃*,663,662(*17)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
-<br>*3|*218380(3)|*374410|*463235|-------|-------┃*,463,235(*17)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
-<br>*4|**89103(3)|*148020|*176259|-------|-------┃*,176,259(*17)┃2019/10/04|Black&nbsp;Clover&nbsp;22
-<br>*5|**91290(3)|*147807|*176120|-------|-------┃*,176,120(*17)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
-<br>*6|**88157(3)|*138855|*161782|-------|-------┃*,161,782(*17)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
-<br>*7|**65934(3)|*110114|*132672|-------|-------┃*,132,672(*17)┃2019/10/04|Boruto&nbsp;9
+<br>*1|1182323(3)|1531766|1711240|1786973|-------┃1,786,973(*24)┃2019/10/04|One&nbsp;Piece&nbsp;94
+<br>*2|*368502(3)|*530591|*663662|*734380|-------┃*,734,380(*24)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*3|*218380(3)|*374410|*463235|*501419|-------┃*,501,419(*24)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
+<br>*4|**89103(3)|*148020|*176259|*188808|-------┃*,188,808(*24)┃2019/10/04|Black&nbsp;Clover&nbsp;22
+<br>*5|**91290(3)|*147807|*176120|*187143|-------┃*,187,143(*24)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
+<br>*6|**88157(3)|*138855|*161782|*174112|-------┃*,174,112(*24)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
+<br>*7|**65934(3)|*110114|*132672|*144768|-------┃*,144,768(*24)┃2019/10/04|Boruto&nbsp;9
 <br>*8|**37276(3)|**61581|**73922|-------|-------┃*,*73,922(*17)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
 <br>*9|**30387(3)|**50170|-------|-------|-------┃*,*50,170(*10)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
 <br>10|**15949(3)|**24988|-------|-------|-------┃*,*24,988(*10)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
