--- a/TOC/index.html
+++ b/TOC/index.html
@@ -211,6 +211,11 @@
 <h2><a href="19_48" style="display:block; width:100%">Weekly Shonen Jump #48 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_48/">
   <img src="img/19_48.jpg">
+</a>
+</a>
+<h2><a href="19_49" style="display:block; width:100%">Weekly Shonen Jump #49 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_49/">
+  <img src="img/19_49.jpg">
 </a>          	  	   	 		  
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
