--- a/TOC/19_49/index.html
+++ b/TOC/19_49/index.html
@@ -14,11 +14,11 @@
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #48 2019">	
+<meta property="og:title" content="Weekly Shonen Jump #49 2019">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_48/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_48">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_49/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_49">
 <meta name="twitter:card" content="summary_large_image">
 
 <link rel="stylesheet" href="css/reset.css">
@@ -50,8 +50,8 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#48</button></a>
+	  <a href="https://manganimy.github.io/TOC/19_48/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#49</button></a>
  	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
@@ -71,7 +71,7 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_47/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_48/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
   <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
@@ -80,36 +80,14 @@
 			
 	<div class="contents">
 
-		<!-- Dr. STONE -->
+		<!-- ACT-AGE -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
+				<div class="l_side"><img src="img/img_matsuki.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Riichiro Inagaki</p>
-					Just as the anime starts the Byakuya arc, we have Boichi Sensei’s side story too! I’m so happy about the perfect timing!
-				</div>
-			</div>
-		</div>
-		<!-- Dr. STONE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100073">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_boichi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Boichi</p>
-					I root for and love people who move forward even if they mess up and get hurt, over those who stay safe out of fear of failure.
-				</div>
-			</div>
-		</div>
- 	 <!-- One Piece -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Eiichiro Oda</p>
-					I want to eat an infinite amount of the Maru-chan Paripari Infinite Cabbage snack. Uh-oh!
+					<p class="author">Tatsuya Matsuki</p>
+					I'm hooked on Terrace House lately. Will they be able to get along, Fukuda Sensei...?
 				</div>
 			</div>
 		</div>
@@ -121,46 +99,23 @@
 				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Koyoharu Gotouge</p>
-					I heard a giant “CRAAASH” and an “Ahhh!” from outside my window. I hope everyone’s okay.
-				</div>
-			</div>
-		</div>		
-		<!-- My Hero Academia -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					Sorry about this week’s chapter. I’m gonna take a break and come back strong!
+					This is belated, but I just wanted to say I'm praying for everyone affected by the typhoon to be able to return to their normal lives as quickly as possible.
 				</div>
 			</div>
 		</div>
-
 		
-		<!-- Haikyuu -->
+		<!-- One Piece -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
+				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Haruichi Furudate</p>
-					My best wishes to everyone who suffered in the typhoon. I pray that everyone recovers as soon as possible.
-				</div>
-			</div>
-		</div>	
-		
-		<!-- Jujutsu Kaisen-->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Gege Akutami</p>
-					Last week I forgot to include a Miwa puppet in the ways to contact Gojo. That’s all right!
+					<p class="author">Eiichiro Oda</p>
+					The Gatebox arrived. It's the future! Having holographic fish swimming around my room is my dream.
 				</div>
 			</div>
 		</div>
+		
 		<!-- We Never Learn -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100035">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -168,23 +123,47 @@
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Taishi Tsutsui</p>
-					I just realized I could connect my smartphone to my TV to watch YouTube. This will help with my workouts!
+					I finally switched from Comic Studio to Clip Studio for finishing up my pages. I was a little nervous using it for the first time...
 				</div>
 			</div>
 		</div>
 		
-		<!-- Mitama -->
+		<!-- Jujutsu Kaisen -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100069">Mitama Secureity: Spirit Busters <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_hatomune.png" alt=""></div>
+				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Tsurun Hatomune</p>
-					I haven’t cut my hair in forever, and it’s now slightly longer than the average middle-aged Japanese woman’s hair length.
+					<p class="author">Gege Akutami</p>
+					You all knew that Mode: Absolute would just turn into a big macho guy, right?
 				</div>
 			</div>
 		</div>
-				
+		
+		<!-- Haikyu!! -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Haruichi Furudate</p>
+					I went to Brazil in May and learned that Kamehameha is a technique that's known all around the world!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Dr. STONE -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Riichiro Inagaki</p>
+					I'm only looking over the side story, but it's a lot of work! But Boichi Sensei's working twice as hard. Amazing! LOL!
+				</div>
+			</div>
+		</div>
+		
 		<!-- Black Clover -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100003">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -192,92 +171,95 @@
 				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Y&umacr;ki Tabata</p>
-					Watching the news is scary. I wish the best for everyone suffering from the typhoon.
+					I'm late on this, but my editor changed! Thank you so much, Toide-san! Welcome to hell, Iwasaki-san!
 				</div>
 			</div>
 		</div>
-
 		
-		<!-- Yozakura -->
+		<!-- The Promised Neverland -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
+				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Hitsuji Gondaira</p>
-					Pocahontas and Belle are really great Disney heroines, but the best is, of course, Esmeralda.
+					<p class="author">Kaiu Shirai</p>
+					Emma wants to ride a giraffe, but I want to ride the Kamanchomenga!
 				</div>
 			</div>
-		</div>		
+		</div>
 		
-		<!-- chainsaw -->
+		<!-- Chainsaw Man -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100037">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tatsuki Fujimoto</p>
-					Thank you so much for the birthday present. It was delicious.
-				</div>
-			</div>
-		</div>
-
-		<!-- actage -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Shiro Usazaki</p>
-					Taking a bath and getting warm makes me fall asleep, so lately I’ve been reading Twitter to keep myself awake.
+					Ranking for imagawayaki fillings: #1 red bean, #2 custard, #3 white bean.
 				</div>
 			</div>
 		</div>
 		
-		<!-- yui -->
+		<!-- Mission: Yozakura Family -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Hitsuji Gondaira</p>
+					Jason Browns's free skating makes me cry, but Keegan Messing's short program makes me cry even more. Uh-oh!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Mitama Security: Spirit Busters -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100069">Mitama Security: Spirit Busters <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_hatomune.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Tsurun Hatomune</p>
+					The NBA season has started! I'm probably not the only NBA fan who's never been more excited for a season.
+				</div>
+			</div>
+		</div>
+		
+		<!-- Samurai 8: The Tale of Hachimaru -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_okubo.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Akira Okubo</p>
+					The cheese-flavored kaki no tane snacks my editor brought back from Hokkaido are a huge hit with my assistants.
+				</div>
+			</div>
+		</div>
+		
+		<!-- Yui Kamio Lets Loose -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Hiroshi Shiibashi</p>
-					I’m having fun asking my assistants how far they’ve gotten in DQ Walk. I’m making slow progress.
+					I didn't think I'd need an e-reader since I have a smartphone, but the e-ink screen is really good.
 				</div>
 			</div>
 		</div>
-	<!-- Double Taisei -->
+		
+		<!-- Double Taisei -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Kentaro Fukuda</p>
-					I live in the Edogawa district. I was drawing the manga while fearing the typhoon. I’m lucky we didn’t lose power.
-				</div>
-			</div>
-		</div>		
-		<!-- samurai 8 -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Masashi Kishimoto</p>
-					I drink a lot of coffee to stay awake. I like the flavor too, so I can’t help but drink too much.
+					Obviously, the real Shoreikai 3-Dan League doesn't have a tiebreak rule. Forgive me.
 				</div>
 			</div>
 		</div>
-	
-		<!-- tokyo -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Matsuura</p>
-					So much sadness when I’m eating a sandwich but can’t bite through the lettuce, and then the whole piece of lettuce is just gone.
-				</div>
-			</div>			
+		
 		<!-- Beast Children -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -285,7 +267,31 @@
 				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Kento Terasaka</p>
-					Japan got first place in their pool in the Rugby World Cup! It feels like I’m dreaming! Let’s win the whole thing!!
+					I've never had such an exciting month and a half. The Rugby World Cup was so fun!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Tokyo Shinobi Squad -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_tanaka.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Yuki Tanaka</p>
+					Volume 2 is now on sale in Japan. The cover is amazing, so please check it out!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Dr. STONE Reboot: Byakuya -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/titles/100073">Dr. STONE Reboot: Byakuya <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_boichi.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Boichi</p>
+					I wasn't able to eat many ginkgo nuts. Unfortunately, Byakuya probably ate even less.
 				</div>
 			</div>
 		</div>
