--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -67,6 +67,7 @@
       <a href="#aa" >&gt;&gt; Act-Age</a>
       <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
+      <a href="#sam8" >&gt;&gt; Samurai 8: The Tale of Hachimaru</a>    
       <p style="background:none">Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <p style="background:none; font-size:.7em;"> Ongoing series </p>
@@ -98,22 +99,23 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,173,103(109)┃2019/07/04|One&nbsp;Piece&nbsp;93
+<br>*1|1182323(3)|1531766|1711240|1786973|1828286┃1,828,286(*31)┃2019/10/04|One&nbsp;Piece&nbsp;94
 <br>*2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,752,846(116)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
-<br>*4|*190803(3)|*399399|*497864|*544803|*570463┃*,642,734(*73)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
-<br>*5|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
+<br>*3|*368502(3)|*530591|*663662|*734380|*816168┃*,816,168(*31)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*4|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
+<br>*5|*218380(3)|*374410|*463235|*501419|*520549┃*,520,549(*31)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
 <br>*6|*260748(5)|*356785|*408394|*440330|*456289┃*,463,955(*40)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
-<br>*7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
-<br>*8|*113823(6)|*151028|*170148|*178355|-------┃*,198,915(*76)┃2019/06/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;35
-<br>*9|*101826(6)|*137190|*152951|*164005|-------┃*,190,825(*76)┃2019/06/04|Boruto&nbsp;8
-<br>10|**98500(4)|*136161|*152250|*162156|*169575┃*,181,712(*46)┃2019/07/04|Jujutsu&nbsp;Kaisen&nbsp;6
+<br>*7|**89103(3)|*148020|*176259|*188808|*196110┃*,196,110(*31)┃2019/10/04|Black&nbsp;Clover&nbsp;22
+<br>*8|**91290(3)|*147807|*176120|*187143|*193284┃*,193,284(*31)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
+<br>*9|**88157(3)|*138855|*161782|*174112|*180772┃*,180,772(*31)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
+<br>10|**65934(3)|*110114|*132672|*144768|*151647┃*,151,647(*31)┃2019/10/04|Boruto&nbsp;9
 <br>11|**68740(5)|**93266|*108006|*117598|-------┃*,117,598(*26)┃2019/09/04|Dr&#46;Stone&nbsp;12
 <br>12|**66245(5)|**92650|*107030|*116359|-------┃*,116,359(*26)┃2019/09/04|Act-Age&nbsp;8
 <br>13|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
-<br>14|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
-<br>15|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
-<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26
+<br>14|**37276(3)|**61581|**73922|*******|**89484┃*,*89,484(*31)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
+<br>15|**30387(3)|**50170|-------|-------|-------┃*,*50,170(*10)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
+<br>16|**15949(3)|**24988|-------|-------|-------┃*,*24,988(*10)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
+<br>17|**11436(3)|**20845|-------|-------|-------┃*,*20,845(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;2
 </span>
 <p>
 	-
@@ -122,22 +124,13 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|1182323(3)|1531766|1711240|1786973|-------┃1,786,973(*24)┃2019/10/04|One&nbsp;Piece&nbsp;94
-<br>*2|*368502(3)|*530591|*663662|*734380|-------┃*,734,380(*24)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
-<br>*3|*218380(3)|*374410|*463235|*501419|-------┃*,501,419(*24)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
-<br>*4|**89103(3)|*148020|*176259|*188808|-------┃*,188,808(*24)┃2019/10/04|Black&nbsp;Clover&nbsp;22
-<br>*5|**91290(3)|*147807|*176120|*187143|-------┃*,187,143(*24)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
-<br>*6|**88157(3)|*138855|*161782|*174112|-------┃*,174,112(*24)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
-<br>*7|**65934(3)|*110114|*132672|*144768|-------┃*,144,768(*24)┃2019/10/04|Boruto&nbsp;9
-<br>*8|**37276(3)|**61581|**73922|-------|-------┃*,*73,922(*17)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
-<br>*9|**30387(3)|**50170|-------|-------|-------┃*,*50,170(*10)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
-<br>10|**15949(3)|**24988|-------|-------|-------┃*,*24,988(*10)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
-<br>11|**12728(3)|**22984|-------|-------|-------┃*,*22,984(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;1
-<br>12|**11436(3)|**20845|-------|-------|-------┃*,*20,845(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;2
+<br>*2|*173650(3)|-------|-------|-------|-------┃*,173,650(**3)┃2019/11/01|Haikyuu&#33;&#33;&nbsp;40
+<br>*3|**46929(3)|-------|-------|-------|-------┃*,*46,929(**3)┃2019/11/01|Dr&#46;Stone&nbsp;13
+<br>*4|**37806(3)|-------|-------|-------|-------┃*,*37,806(**3)┃2019/11/01|We&nbsp;Never&nbsp;Learn&nbsp;14
 <br>
 <br>	
 <br>[Not Ranked]
-<br>Yui Kamio Lets Loose , Double Taisei, Beast Children, Tokyo Shinobi Squad
+<br>Yui Kamio Lets Loose 3, Double Taisei 2, Beast Children 2, Tokyo Shinobi Squad 2
 
 </span>
 
@@ -474,6 +467,14 @@
 <br>|*26382(4)|*39870|------|------|------┃*,*39,870(*11)┃2019/05/02|Chainsaw&nbsp;Man&nbsp;2
 <br>|*25075(3)|*50952|*61532|------|------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
 </span>	
+		  <p style="border-bottom: 1px solid black;margin-top:50px"></p>
+<strong id="sam8" style="padding-top:50px">Samurai 8: The Tale of Hachimaru</strong>
+<p></p>
+<span>
+|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+<br>*12728(3)|*22984|------|------|------┃*,*22,984(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;1
+<br>*11436(3)|*20845|------|------|------┃*,*20,845(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;2
+</span>			  
 <br>		  
 <h1 id="jumpplus" style="padding-top:30px">Jump&#43;</h1>
 <p></p>
@@ -676,6 +677,7 @@
 <a href="#aa" >&gt;&gt; Act-Age</a>
 <a href="#jjk" >&gt;&gt; Jujutsu Kaisen</a>
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
+<a href="#sam8" >&gt;&gt; Samurai 8: The Tale of Hachimaru</a>
 <p>Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
 <p style="font-size:.9em;"> Ongoing series </p>	
