--- a/TOC/index.html
+++ b/TOC/index.html
@@ -216,7 +216,11 @@
 <h2><a href="19_49" style="display:block; width:100%">Weekly Shonen Jump #49 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_49/">
   <img src="img/19_49.jpg">
-</a>          	  	   	 		  
+</a>
+<h2><a href="19_50" style="display:block; width:100%">Weekly Shonen Jump #50 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_50/">
+  <img src="img/19_50.jpg">
+</a> 	
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
 <div style="text-align:center;">
