--- a/TOC/index.html
+++ b/TOC/index.html
@@ -220,6 +220,10 @@
 <h2><a href="19_50" style="display:block; width:100%">Weekly Shonen Jump #50 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_50/">
   <img src="img/19_50.jpg">
+</a> 
+<h2><a href="19_51" style="display:block; width:100%">Weekly Shonen Jump #51 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_51/">
+  <img src="img/19_51.jpg">
 </a> 	
 <img src="img/mascot.png" style="width:20vw; max-width:15opx; margin-top:10px;" class="center">
 	<p style="border-top: 2px solid yellow"> </p>
