--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -99,9 +99,9 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1182323 (3)|1531766|1711240|1786973|1828286┃1,828,286 (*31)┃2019/10/04|One&nbsp;Piece&nbsp;94
+<br>*1|1182323 (3)|1531766|1711240|1786973|1828286┃1,880,146 (*45)┃2019/10/04|One&nbsp;Piece&nbsp;94
 <br>*2|*498226 (4)|*709028|*793638|*838642|*863207┃*,984,493 (228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*368502 (3)|*530591|*663662|*734380|*816168┃*,816,168 (*31)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*3|*368502 (3)|*530591|*663662|*734380|*816168┃*,926,446 (*45)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
 <br>*4|*201910 (3)|*406721|*496745|*538784|*561135┃*,573,043 (*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
 <br>*5|*218380 (3)|*374410|*463235|*501419|*520549┃*,520,549 (*31)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
 <br>*6|*260748 (5)|*356785|*408394|*440330|*456289┃*,463,955 (*40)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
@@ -120,17 +120,17 @@
 <p>
 	-
 </p>
-<strong id="current" style="padding-top:50px"> Current Volumes Data  (October 2019)</strong>
+<strong id="current" style="padding-top:50px"> Current Volumes Data  (November 2019)</strong>
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*173650 (3)|-------|-------|-------|-------┃*,173,650 (**3)┃2019/11/01|Haikyuu&#33;&#33;&nbsp;40
-<br>*2|**46929 (3)|-------|-------|-------|-------┃*,*46,929 (**3)┃2019/11/01|Dr&#46;Stone&nbsp;13
-<br>*3|**37806 (3)|-------|-------|-------|-------┃*,*37,806 (**3)┃2019/11/01|We&nbsp;Never&nbsp;Learn&nbsp;14
+<br>*1|*173650 (3)|*329923|*382601|-------|-------┃*,382,601 (*17)┃2019/11/01|Haikyuu&#33;&#33;&nbsp;40
+<br>*2|**46929 (3)|**93197|*110311|-------|-------┃*,110,311 (*17)┃2019/11/01|Dr&#46;Stone&nbsp;13
+<br>*3|**37806 (3)|**74563|**88852|-------|-------┃*,*88,852 (*17)┃2019/11/01|We&nbsp;Never&nbsp;Learn&nbsp;14
 <br>
 <br>	
 <br>[Not Ranked]
-<br>Yui Kamio Lets Loose 3, Double Taisei 2, Beast Children 2, Tokyo Shinobi Squad 2
+<br>Double Taisei 2, Beast Children 2, Tokyo Shinobi Squad 2
 
 </span>
 
@@ -482,7 +482,7 @@
 <p></p>			  
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|**39461 (4)|**54004|**63953|*104136|*126037┃*,354,753 (109)┃2019/07/04|SPY×FAMILY&nbsp;1
+<br>*1|**39461 (4)|**54004|**63953|*104136|*126037┃*,417,592 (137)┃2019/07/04|SPY×FAMILY&nbsp;1
 <br>*2|**48098 (3)|**91617|*110893|*******|*125137┃*,125,137 (*31)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
 <br>*3|**52663 (5)|**74635|**87060|**95048|-------┃*,*95,048 (*26)┃2019/09/04|Jigokuraku&nbsp;7
 <br>*4|**33601 (4)|**53438|**62143|-------|-------┃*,*62,143 (*18)┃2019/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;13
@@ -505,7 +505,7 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp; (F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*109702 (3)|*193425|*240226|-------|-------┃*,240,226 (*17)┃2019/10/04|SPY×FAMILY&nbsp;2
+<br>*1|*109702 (3)|*193425|*240226|*277622|*299716┃*,336,475 (*45)┃2019/10/04|SPY×FAMILY&nbsp;2
 <br>*2|**10842 (3)|**19252|-------|-------|-------┃*,*19,252 (*10)┃2019/10/04|Black&nbsp;Clover&nbsp;Gaiden:&nbsp;Quartet&nbsp;Knights&nbsp;&nbsp;3
 <br>*3|***9961 (3)|**18341|-------|-------|-------┃*,*18,341 (*10)┃2019/10/04|2.5&nbsp;Dimensional&nbsp;Seduction&nbsp;&nbsp;1
 <br>*4|***9276 (3)|-------|-------|-------|-------┃*,**9,276 (**3)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;8
